--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <main>
     <div class="posters">
       <figure class="poster">
-        <img src="images/ida-18x24.jpg" alt="A famous photo of Ida B Wells looking resolute, under her a caption reads Different century same old bullshit. Stop voter suppression" height="532" width="400">
+        <img src="images/ida-18x24.jpg" loading="lazy" alt="A famous photo of Ida B Wells looking resolute, under her a caption reads Different century same old bullshit. Stop voter suppression" height="532" width="400">
         <div class="poster__links">
           <a href="https://static.nahfuckthat.org/ida-18x24.pdf" class="poster__link" target="_blank">18" x 24" PDF <span>&rarr;</span></a>
           <a href="https://static.nahfuckthat.org/ida-24x36.pdf" class="poster__link" target="_blank">24" x 36" PDF <span>&rarr;</span></a>
@@ -25,7 +25,7 @@
         </div>
       </figure>
       <figure class="poster">
-        <img src="images/you-again-18x24.jpg" alt="An illustration of Uncle Sam rolling up his sleeves, wielding a wrench, facing right. He is asking You Again?. Next to him are two angry bobble-head versions of Elon Musk giving a Nazi salute and Donald Trump with a swastika armband. Under this it says Stop the fascists. Defend democracy. We beat em before, we'll do it again. Protest, Boycott, Strike, Vote." height="532" width="400">
+        <img src="images/you-again-18x24.jpg" loading="lazy" alt="An illustration of Uncle Sam rolling up his sleeves, wielding a wrench, facing right. He is asking You Again?. Next to him are two angry bobble-head versions of Elon Musk giving a Nazi salute and Donald Trump with a swastika armband. Under this it says Stop the fascists. Defend democracy. We beat em before, we'll do it again. Protest, Boycott, Strike, Vote." height="532" width="400">
         <div class="poster__links">
           <a href="https://static.nahfuckthat.org/you-again-18x24.pdf" class="poster__link" target="_blank">18" x 24" PDF <span>&rarr;</span></a>
           <a href="https://static.nahfuckthat.org/you-again-24x36.pdf" class="poster__link" target="_blank">24" x 36" PDF <span>&rarr;</span></a>
@@ -33,7 +33,7 @@
         </div>
       </figure>
       <figure class="poster">
-        <img src="images/defend-american-freedom-18x24.jpg" alt="An illustration of Uncle Sam putting on worker's clothes. Above him it says Defend American Freedom. It's everybody's job. Under him a caption reads Due process isn't a suggestion. End illegal deportations. Protest, boycott, strike" height="532" width="400">
+        <img src="images/defend-american-freedom-18x24.jpg" loading="lazy" alt="An illustration of Uncle Sam putting on worker's clothes. Above him it says Defend American Freedom. It's everybody's job. Under him a caption reads Due process isn't a suggestion. End illegal deportations. Protest, boycott, strike" height="532" width="400">
         <div class="poster__links">
           <a href="https://static.nahfuckthat.org/defend-american-freedom-18x24.pdf" class="poster__link" target="_blank">18" x 24" PDF <span>&rarr;</span></a>
           <a href="https://static.nahfuckthat.org/defend-american-freedom-24x36.pdf" class="poster__link" target="_blank">24" x 36" PDF <span>&rarr;</span></a>
@@ -41,7 +41,7 @@
         </div>
       </figure>
       <figure class="poster">
-        <img src="images/divest-tsla-18x24.jpg" alt="An upside down Tesla logo that has been modified to appear like a KKK member giving a salute. Under this, text reads $tsla funds fascism. Divest today. Red logo, black text, white background" height="532" width="400">
+        <img src="images/divest-tsla-18x24.jpg" loading="lazy" alt="An upside down Tesla logo that has been modified to appear like a KKK member giving a salute. Under this, text reads $tsla funds fascism. Divest today. Red logo, black text, white background" height="532" width="400">
         <div class="poster__links">
           <a href="https://static.nahfuckthat.org/divest-tsla-18x24.pdf" class="poster__link" target="_blank">18" x 24" PDF <span>&rarr;</span></a>
           <a href="https://static.nahfuckthat.org/divest-tsla-24x36.pdf" class="poster__link" target="_blank">24" x 36" PDF <span>&rarr;</span></a>
@@ -49,7 +49,7 @@
         </div>
       </figure>
       <figure class="poster">
-        <img src="images/divest-tsla-red-18x24.jpg" alt="An upside down Tesla logothat has been modified to appear like a KKK member giving a salute. Under this, text reads $tsla funds fascism. Divest today. White logo, white text, red background" height="532" width="400">
+        <img src="images/divest-tsla-red-18x24.jpg" loading="lazy" alt="An upside down Tesla logothat has been modified to appear like a KKK member giving a salute. Under this, text reads $tsla funds fascism. Divest today. White logo, white text, red background" height="532" width="400">
         <div class="poster__links">
           <a href="https://static.nahfuckthat.org/divest-tsla-red-18x24.pdf" class="poster__link" target="_blank">18" x 24" PDF <span>&rarr;</span></a>
           <a href="https://static.nahfuckthat.org/divest-tsla-red-24x36.pdf" class="poster__link" target="_blank">24" x 36" PDF <span>&rarr;</span></a>
@@ -60,7 +60,7 @@
   </main>
 
   <footer class="footer">
-    <img src="images/bluesky.svg" alt="The logo of Bluesky: A simple butterfly shape.">
+    <img src="images/bluesky.svg" loading="lazy" alt="The logo of Bluesky: A simple butterfly shape.">
     <a href="https://nah-fuck-that.bsky.social" target="_blank">nah-fuck-that.bsky.social</a>
   </footer>
 </body>
