--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Resources for the resistance. We don't do fascism here.">
+
+  <meta property="og:title" content="Resources for the resistance">
+  <meta property="og:image" content="http://nahfuckthat.org/images/share-image.png">
+  <meta property="og:url" content="http://nahfuckthat.org">
+  <meta property="og:description" content="Resources for the resistance. We don't do fascism here.">
+  <meta property="og:site_name" content="Nah, Fuck That">
+  <meta name="twitter:card" content="summary_large_image">
+
   <title>Resources for the resistance</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="images/punch.png" type="image/x-icon">
@@ -11,7 +21,7 @@
     <img class="punch" src="images/punch.png" alt="A fist punching through the center of a swastika" class="punch" height="203" width="185">
     <img class="eyebrow" src="images/facist-usa.svg" alt="Facist USA?" width="328" height="60">
     <h1 class="title"><img src="images/nah-fuck-that.svg" alt="Nah, Fuck That" width="745" height="80"></h1>
-    <h3 class="subtitle">Post <span class="subtitle__star">★</span> Print <span class="subtitle__star">★</span> Protest <span class="subtitle__star">★</span> Paste</h3>
+    <h2 class="subtitle">Post <span class="subtitle__star">★</span> Print <span class="subtitle__star">★</span> Protest <span class="subtitle__star">★</span> Paste</h2>
   </header>
 
   <main>
@@ -60,7 +70,7 @@
   </main>
 
   <footer class="footer">
-    <img src="images/bluesky.svg" loading="lazy" alt="The logo of Bluesky: A simple butterfly shape.">
+    <img src="images/bluesky.svg" loading="lazy" alt="The logo of Bluesky: A simple butterfly shape." width="24" height="21">
     <a href="https://nah-fuck-that.bsky.social" target="_blank">nah-fuck-that.bsky.social</a>
   </footer>
 </body>
