--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <header class="header">
-    <img class="punch" src="images/punch.png" alt="A fist punching through the center of a swastika" class="punch" height="203" width="185">
+    <img class="punch" src="images/punch.avif" alt="A fist punching through the center of a swastika" class="punch" height="203" width="185">
     <img class="eyebrow" src="images/facist-usa.svg" alt="Facist USA?" width="328" height="60">
     <h1 class="title"><img src="images/nah-fuck-that.svg" alt="Nah, Fuck That" width="745" height="80"></h1>
     <h2 class="subtitle">Post <span class="subtitle__star">★</span> Print <span class="subtitle__star">★</span> Protest <span class="subtitle__star">★</span> Paste</h2>
@@ -27,7 +27,7 @@
   <main>
     <div class="posters">
       <figure class="poster">
-        <img src="images/ida-18x24.jpg" loading="lazy" alt="A famous photo of Ida B Wells looking resolute, under her a caption reads Different century same old bullshit. Stop voter suppression" height="532" width="400">
+        <img src="images/ida-18x24.avif" loading="lazy" alt="A famous photo of Ida B Wells looking resolute, under her a caption reads Different century same old bullshit. Stop voter suppression" height="532" width="400">
         <div class="poster__links">
           <a href="https://static.nahfuckthat.org/ida-18x24.pdf" class="poster__link" target="_blank">18" x 24" PDF <span>&rarr;</span></a>
           <a href="https://static.nahfuckthat.org/ida-24x36.pdf" class="poster__link" target="_blank">24" x 36" PDF <span>&rarr;</span></a>
@@ -35,7 +35,7 @@
         </div>
       </figure>
       <figure class="poster">
-        <img src="images/you-again-18x24.jpg" loading="lazy" alt="An illustration of Uncle Sam rolling up his sleeves, wielding a wrench, facing right. He is asking You Again?. Next to him are two angry bobble-head versions of Elon Musk giving a Nazi salute and Donald Trump with a swastika armband. Under this it says Stop the fascists. Defend democracy. We beat em before, we'll do it again. Protest, Boycott, Strike, Vote." height="532" width="400">
+        <img src="images/you-again-18x24.avif" loading="lazy" alt="An illustration of Uncle Sam rolling up his sleeves, wielding a wrench, facing right. He is asking You Again?. Next to him are two angry bobble-head versions of Elon Musk giving a Nazi salute and Donald Trump with a swastika armband. Under this it says Stop the fascists. Defend democracy. We beat em before, we'll do it again. Protest, Boycott, Strike, Vote." height="532" width="400">
         <div class="poster__links">
           <a href="https://static.nahfuckthat.org/you-again-18x24.pdf" class="poster__link" target="_blank">18" x 24" PDF <span>&rarr;</span></a>
           <a href="https://static.nahfuckthat.org/you-again-24x36.pdf" class="poster__link" target="_blank">24" x 36" PDF <span>&rarr;</span></a>
@@ -43,7 +43,7 @@
         </div>
       </figure>
       <figure class="poster">
-        <img src="images/defend-american-freedom-18x24.jpg" loading="lazy" alt="An illustration of Uncle Sam putting on worker's clothes. Above him it says Defend American Freedom. It's everybody's job. Under him a caption reads Due process isn't a suggestion. End illegal deportations. Protest, boycott, strike" height="532" width="400">
+        <img src="images/defend-american-freedom-18x24.avif" loading="lazy" alt="An illustration of Uncle Sam putting on worker's clothes. Above him it says Defend American Freedom. It's everybody's job. Under him a caption reads Due process isn't a suggestion. End illegal deportations. Protest, boycott, strike" height="532" width="400">
         <div class="poster__links">
           <a href="https://static.nahfuckthat.org/defend-american-freedom-18x24.pdf" class="poster__link" target="_blank">18" x 24" PDF <span>&rarr;</span></a>
           <a href="https://static.nahfuckthat.org/defend-american-freedom-24x36.pdf" class="poster__link" target="_blank">24" x 36" PDF <span>&rarr;</span></a>
@@ -51,7 +51,7 @@
         </div>
       </figure>
       <figure class="poster">
-        <img src="images/divest-tsla-18x24.jpg" loading="lazy" alt="An upside down Tesla logo that has been modified to appear like a KKK member giving a salute. Under this, text reads $tsla funds fascism. Divest today. Red logo, black text, white background" height="532" width="400">
+        <img src="images/divest-tsla-18x24.avif" loading="lazy" alt="An upside down Tesla logo that has been modified to appear like a KKK member giving a salute. Under this, text reads $tsla funds fascism. Divest today. Red logo, black text, white background" height="532" width="400">
         <div class="poster__links">
           <a href="https://static.nahfuckthat.org/divest-tsla-18x24.pdf" class="poster__link" target="_blank">18" x 24" PDF <span>&rarr;</span></a>
           <a href="https://static.nahfuckthat.org/divest-tsla-24x36.pdf" class="poster__link" target="_blank">24" x 36" PDF <span>&rarr;</span></a>
@@ -59,7 +59,7 @@
         </div>
       </figure>
       <figure class="poster">
-        <img src="images/divest-tsla-red-18x24.jpg" loading="lazy" alt="An upside down Tesla logothat has been modified to appear like a KKK member giving a salute. Under this, text reads $tsla funds fascism. Divest today. White logo, white text, red background" height="532" width="400">
+        <img src="images/divest-tsla-red-18x24.avif" loading="lazy" alt="An upside down Tesla logothat has been modified to appear like a KKK member giving a salute. Under this, text reads $tsla funds fascism. Divest today. White logo, white text, red background" height="532" width="400">
         <div class="poster__links">
           <a href="https://static.nahfuckthat.org/divest-tsla-red-18x24.pdf" class="poster__link" target="_blank">18" x 24" PDF <span>&rarr;</span></a>
           <a href="https://static.nahfuckthat.org/divest-tsla-red-24x36.pdf" class="poster__link" target="_blank">24" x 36" PDF <span>&rarr;</span></a>
