--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="description" content="Resources for the resistance. We don't do fascism here.">
 
   <meta property="og:title" content="Resources for the resistance">
-  <meta property="og:image" content="http://nahfuckthat.org/images/share-image.png">
-  <meta property="og:url" content="http://nahfuckthat.org">
+  <meta property="og:image" content="https://nahfuckthat.org/images/share-image.png">
+  <meta property="og:url" content="https://nahfuckthat.org">
   <meta property="og:description" content="Resources for the resistance. We don't do fascism here.">
   <meta property="og:site_name" content="Nah, Fuck That">
   <meta name="twitter:card" content="summary_large_image">
