trying to fix sharing image issues

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Resources for the resistance. We don't do fascism here.">
 
   <meta property="og:title" content="Resources for the resistance">
-  <meta property="og:image" content="https://nahfuckthat.org/images/share-image.png">
+  <meta property="og:image" content="https://nahfuckthat.org/images/share-image.jpg">
   <meta property="og:url" content="https://nahfuckthat.org">
   <meta property="og:description" content="Resources for the resistance. We don't do fascism here.">
   <meta property="og:site_name" content="Nah, Fuck That">
