--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Resources for the resistance. We don't do fascism here.">
 
-  <meta property="og:title" content="Resources for the resistance">
+  <meta property="og:title" content="Resources for the Resistance">
   <meta property="og:image" content="https://nahfuckthat.org/images/share-image.jpg">
   <meta property="og:url" content="https://nahfuckthat.org">
   <meta property="og:description" content="Fight for democracy. Defend the constitution. Do not comply.">
   <meta property="og:site_name" content="Nah, Fuck That">
   <meta name="twitter:card" content="summary_large_image">
 
-  <title>Resources for the resistance</title>
+  <title>Resources for the Resistance</title>
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="images/punch.png" type="image/x-icon">
 </head>
