--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <img class="punch" src="images/punch.avif" alt="A fist punching through the center of a swastika" class="punch" height="203" width="185">
     <img class="eyebrow" src="images/facist-usa.svg" alt="Facist USA?" width="328" height="60">
     <h1 class="title"><img src="images/nah-fuck-that.svg" alt="Nah, Fuck That" width="745" height="80"></h1>
-    <h2 class="subtitle">Post <span class="subtitle__star">★</span> Print <span class="subtitle__star">★</span> Protest <span class="subtitle__star">★</span> Paste</h2>
+    <h2 class="subtitle">Print <span class="subtitle__star">★</span> Protest <span class="subtitle__star">★</span> Paste</h2>
   </header>
 
   <main>
