--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Resources for the Resistance">
   <meta property="og:image" content="https://nahfuckthat.org/images/share-image.jpg">
   <meta property="og:url" content="https://nahfuckthat.org">
-  <meta property="og:description" content="Fight for democracy. Defend the constitution. Do not comply.">
+  <meta property="og:description" content="Fight for democracy. Defend the constitution. Do not obey in advance.">
   <meta property="og:site_name" content="Nah, Fuck That">
   <meta name="twitter:card" content="summary_large_image">
 
