--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="twitter:card" content="summary_large_image">
 
   <title>Resources for the Resistance</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-4158.css">
   <link rel="shortcut icon" href="images/punch.png" type="image/x-icon">
 </head>
 <body>
