adjusted lazy loading to optimize LCP

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <main>
     <div class="posters">
       <figure class="poster">
-        <img src="images/ida-18x24.avif" loading="lazy" alt="A famous photo of Ida B Wells looking resolute, under her a caption reads Different century same old bullshit. Stop voter suppression" height="532" width="400">
+        <img src="images/ida-18x24.avif" alt="A famous photo of Ida B Wells looking resolute, under her a caption reads Different century same old bullshit. Stop voter suppression" height="532" width="400">
         <div class="poster__links">
           <a href="https://static.nahfuckthat.org/ida-18x24.pdf" class="poster__link" target="_blank">18" x 24" PDF <span>&rarr;</span></a>
           <a href="https://static.nahfuckthat.org/ida-24x36.pdf" class="poster__link" target="_blank">24" x 36" PDF <span>&rarr;</span></a>
@@ -35,7 +35,7 @@
         </div>
       </figure>
       <figure class="poster">
-        <img src="images/you-again-18x24.avif" loading="lazy" alt="An illustration of Uncle Sam rolling up his sleeves, wielding a wrench, facing right. He is asking You Again?. Next to him are two angry bobble-head versions of Elon Musk giving a Nazi salute and Donald Trump with a swastika armband. Under this it says Stop the fascists. Defend democracy. We beat em before, we'll do it again. Protest, Boycott, Strike, Vote." height="532" width="400">
+        <img src="images/you-again-18x24.avif" alt="An illustration of Uncle Sam rolling up his sleeves, wielding a wrench, facing right. He is asking You Again?. Next to him are two angry bobble-head versions of Elon Musk giving a Nazi salute and Donald Trump with a swastika armband. Under this it says Stop the fascists. Defend democracy. We beat em before, we'll do it again. Protest, Boycott, Strike, Vote." height="532" width="400">
         <div class="poster__links">
           <a href="https://static.nahfuckthat.org/you-again-18x24.pdf" class="poster__link" target="_blank">18" x 24" PDF <span>&rarr;</span></a>
           <a href="https://static.nahfuckthat.org/you-again-24x36.pdf" class="poster__link" target="_blank">24" x 36" PDF <span>&rarr;</span></a>
