replaced swastika-punch logo with Uncle Sam

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Resources for the resistance. We don't do fascism here.">
 
   <meta property="og:title" content="Resources for the Resistance">
-  <meta property="og:image" content="https://nahfuckthat.org/images/share-image.jpg">
+  <meta property="og:image" content="https://nahfuckthat.org/images/share-image.jpg?v=2">
   <meta property="og:url" content="https://nahfuckthat.org">
   <meta property="og:description" content="Fight for democracy. Defend the constitution. Do not obey in advance.">
   <meta property="og:site_name" content="Nah, Fuck That">
@@ -14,12 +14,23 @@
 
   <title>Resources for the Resistance</title>
   <link rel="stylesheet" href="style-4158.css">
-  <link rel="shortcut icon" href="images/punch.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/favicon.png?v=2" type="image/x-icon">
 </head>
 <body>
   <header class="header">
-    <img class="punch" src="images/punch.avif" alt="A fist punching through the center of a swastika" height="203" width="185">
-    <img class="eyebrow" src="images/facist-usa.svg" alt="Facist USA?" width="328" height="60">
+    <svg class="eyebrow" width="328" height="60" xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 328 60.2">
+      <path d="M17.1,51.3c.6,0,.9-.5.9-1.6s-.5-2.8-1.4-5.1-2.3-5.3-4.2-9-3.9-7.4-6.2-11.4S2.1,16.6.3,13.4C6.7,9.4,11.7,4.9,15.3,0c4.7,1.7,9.9,3.4,15.6,5.1-2.2,2.8-4.4,5.6-6.6,8.4-.7-1-2.3-2.1-5-3.2s-4.5-1.6-5.4-1.6-1.6.1-1.8.4-.4.7-.4,1.1c0,1.4.9,4.2,2.6,8.3,1.1,0,2.8,0,5.2,0s5.8-.3,10.3-.8c-.5,2.5-.9,5-1.3,7.5l-11.4-.6c3.1,6.5,6.3,12.3,9.8,17.3-3.6,4.9-7.9,11-13,18.1-5.1-2.5-9.7-6.8-13.7-12.7,1-2.4,2.2-5.6,3.8-9.6,2.1,3.3,4.7,6.3,7.5,9.2,2.9,2.8,4.8,4.3,5.7,4.3Z" fill="#ffffff"/>
+      <path d="M32.6,24.5l12.3-10,14,6.5c-1.6,1.4-2.5,3-2.5,4.8v10.5c-.1.7.2,1.5,1,2.4s1.5,1.6,2.1,2.2l-6.4,6.6-4.9-5c-1.2.9-2.4,1.8-3.6,2.6s-2.3,1.6-3.2,2.5c-3.2-1.2-6.1-3-8.8-5.5.8-1,1.2-2.4,1.4-4.3v-9.5c0,0,0-.2,0-.3,0-1.2-.4-2.4-1.3-3.5ZM43.5,22.1c-1.2,1.8-1.8,3.5-1.8,4.9v7.7c0,1.6.3,2.7.9,3.4.5.7.9,1.3,1.3,1.9s1.1.9,2,1.2l2.6-1.9v-14.5l-4.9-2.7Z" fill="#ffffff"/>
+      <path d="M61.4,41.6l5.5-5.7c-2-2.7-3.4-5.7-4.2-9,2.5-4.2,6.3-8.3,11.2-12.5,3.9,1.1,8.4,2.1,13.4,3l.8-.2-5.9,6.1,5.2,13c-3.9,2.9-7.5,6.7-10.8,11.2-4.1-2.4-9.1-4.4-15.1-5.9ZM78.1,39.5c2.1,0,3.2-.8,3.2-2.3s-1.5-4.1-4.5-8.3l-7.6,7.8c3.3,1.9,6.2,2.8,8.9,2.8ZM73.1,29.4l6.1-6.3c-3.7-1-6.1-1.5-7.4-1.5s-1.9.1-2.1.4-.2.5-.2.7c0,1.2,1.2,3.5,3.5,6.8Z" fill="#ffffff"/>
+      <path d="M110.8,37.1l-10.7,10.5c-6.7-4.5-10.1-9.7-10.1-15.6s.9-5.8,2.8-8.7,4.9-5.9,9.2-9.3c1.8,1.2,3.7,2.3,5.6,3.5s3.8,2.2,5.7,3.4l-6.3,5.6c-1.3-.8-2.3-1.4-3-2s-1.5-1-2.4-1.4-1.4-.6-1.8-.6-.8.2-1.2.6c-1.3,1.3-2,2.8-2,4.5,0,2.9,1.7,6.1,5.1,9.4.9.8,1.7,1.2,2.5,1.2,1.4,0,2.7-1,3.9-2.9.4.3.9.6,1.3.9s.9.6,1.4.9Z" fill="#ffffff"/>
+      <path d="M114.6,20.4l4.8-6,7.1,3.3c-.3.9-.5,1.7-.8,2.5s-.4,1.7-.4,2.5l-.4,12.8v.3c0,1,.3,1.8.9,2.5s1.4,1.1,2.2,1.5l-6.3,7.7-6.7-5.4c1.2-1.5,1.8-2.9,1.8-4.4l.2-14.3c0-1-.8-2-2.3-3ZM115.6,14.1l2.5-12.5,9.4,3.8-11.9,8.7Z" fill="#ffffff"/>
+      <path d="M129.4,41.6l5.5-5.7c-2-2.7-3.4-5.7-4.2-9,2.5-4.2,6.3-8.3,11.2-12.5,3.9,1.1,8.4,2.1,13.4,3l.8-.2-5.9,6.1,5.2,13c-3.9,2.9-7.5,6.7-10.8,11.2-4.1-2.4-9.1-4.4-15.1-5.9ZM146.1,39.5c2.1,0,3.2-.8,3.2-2.3s-1.5-4.1-4.5-8.3l-7.6,7.8c3.3,1.9,6.2,2.8,8.9,2.8ZM141.1,29.4l6.1-6.3c-3.7-1-6.1-1.5-7.4-1.5s-1.9.1-2.1.4-.2.5-.2.7c0,1.2,1.2,3.5,3.5,6.8Z" fill="#ffffff"/>
+      <path d="M173.8,39.8l-7,7.7c-1.5-1.2-3.1-2.4-4.6-3.6s-3.1-2.4-4.6-3.6c2.3-2,3.5-4.2,3.5-6.4v-13.1c.1,0-2.6,0-2.6,0v-2.5c2.9-4.1,6.5-9.4,10.9-16l1.6.3c-.5,2.3-.9,4.2-1.3,5.7s-.6,3.3-.7,5.5h5.6v6.8h-5.7v13.5c0,1.6,0,2.5.4,2.7s1.8,1.2,4.6,3Z" fill="#ffffff"/>
+      <path d="M205.4,5.1l-.8,8v25.7c0,.6,6.1,2,7.7,2s3.7-3.6,3.8-3.9c.1-.3.2-4.3.2-23.8l-.8-7.9h11.9l-.8,7.9v26.8l.8,8.7h-10.5l-.3-5.9c-1.6,2-5.5,6.9-7.2,6.9-4.1,0-15.1-2.5-15.1-4.5V13.1l-.8-8h11.9Z" fill="#ffffff"/>
+      <path d="M232.1,46.2v-10.7c7.4,2.7,15.1,5.2,18,5.2s1.8-1.3,1.9-1.4c.1-.2.2-1.1.2-2.2,0-2.1-1.5-3.4-9.3-6.7s-11.6-6.9-11.6-12.6,0-4.1.5-5.1c.9-1.9,8.7-8.5,10.9-8.5,4.7,0,11.6.8,18.4,1.6v10.2c-5.6-1.3-14.7-3.2-17.3-3.2s-1.7,1.2-1.9,1.4c-.1.1-.2.8-.2,1.6,0,1.8,1.4,3,9.3,6.4,7.6,3.3,11.6,6.6,11.6,12.1s0,5.7-.5,6.7c-1,2.3-9,8.5-11.1,8.5-5.2,0-11.8-1.3-18.8-3.3Z" fill="#ffffff"/>
+      <path d="M288.2,41l-.4-1.6h-12.5l-.4,1.6-.5,7.4h-10.8l9.8-38.7-1-4.7h17.2l10.9,43.4h-11.7l-.6-7.4ZM286,31.7l-4.5-18.9-4.4,18.9h8.9Z" fill="#ffffff"/>
+      <path d="M317.9,21c.1-.3,0-3.1,0-5s-6.3-1.7-11-2.1l-8,.7,3.8-10.3c9,.3,25.1,3.6,25.1,5.6,0,3.2,0,12-.3,13.6-.3,1.6-6.9,4.5-11.5,6.5l-.3,4.6-7,.9-.6-10c3-1.3,9.6-4.3,9.7-4.6ZM317.7,38.2v10l-9.8,1.2-1-9.8,10.8-1.4Z" fill="#ffffff"/>
+    </svg>
     <h1 class="title"><img src="images/nah-fuck-that.svg" alt="Nah, Fuck That" width="745" height="80"></h1>
     <h2 class="subtitle">Print <span class="subtitle__star">★</span> Protest <span class="subtitle__star">★</span> <a href="https://duckduckgo.com/?t=h_&q=How+to+wheatpaste" rel="noopener noreferrer" target="blank">Paste</a></h2>
   </header>
