cachebusting, fixed small alt text typo

--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         </div>
       </figure>
       <figure class="poster">
-        <img src="images/divest-tsla-red-18x24.avif" loading="lazy" alt="An upside down Tesla logothat has been modified to appear like a KKK member giving a salute. Under this, text reads $tsla funds fascism. Divest today. White logo, white text, red background" height="532" width="400">
+        <img src="images/divest-tsla-red-18x24.avif" loading="lazy" alt="An upside down Tesla logo that has been modified to appear like a KKK member giving a salute. Under this, text reads $tsla funds fascism. Divest today. White logo, white text, red background" height="532" width="400">
         <div class="poster__links">
-          <a href="https://static.nahfuckthat.org/divest-tsla-red-18x24.pdf" class="poster__link" target="_blank">18" x 24" PDF <span>&rarr;</span></a>
-          <a href="https://static.nahfuckthat.org/divest-tsla-red-24x36.pdf" class="poster__link" target="_blank">24" x 36" PDF <span>&rarr;</span></a>
+          <a href="https://static.nahfuckthat.org/divest-tsla-red-18x24.pdf?v=2" class="poster__link" target="_blank">18" x 24" PDF <span>&rarr;</span></a>
+          <a href="https://static.nahfuckthat.org/divest-tsla-red-24x36.pdf?v=2" class="poster__link" target="_blank">24" x 36" PDF <span>&rarr;</span></a>
           <a href="https://static.nahfuckthat.org/divest-tsla-red-18x24.jpg" class="poster__link" target="_blank">JPG for Web <span>&rarr;</span></a>
         </div>
       </figure>
